--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "glob": "^6.0.4",
     "method-override": "^2.3.0",
     "mongodb": "^2.2.25",
+    "mongoose": "^4.9.1",
     "morgan": "^1.6.1",
     "serve-favicon": "^2.3.0"
   },
