--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.13.3",
     "express-handlebars": "^3.0.0",
     "glob": "^6.0.4",
+    "handlebars": "^4.0.6",
     "method-override": "^2.3.0",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.1",
