--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "co": "^4.6.0",
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
+    "csv": "^1.1.1",
     "express": "^4.13.3",
     "express-handlebars": "^3.0.0",
     "glob": "^6.0.4",
@@ -30,8 +31,8 @@
     "debug": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.1",
-    "gulp-nodemon": "^2.0.2",
     "gulp-livereload": "^3.8.0",
+    "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
     "mocha": "^3.0.2",
     "nyc": "^10.0.0",
