--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.1",
     "morgan": "^1.6.1",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
