--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-handlebars": "^3.0.0",
     "glob": "^6.0.4",
     "handlebars": "^4.0.6",
+    "handlebars-helpers": "^0.9.8",
     "method-override": "^2.3.0",
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.1",
@@ -32,8 +33,8 @@
     "debug": "^2.2.0",
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.1",
-    "gulp-nodemon": "^2.0.2",
     "gulp-livereload": "^3.8.0",
+    "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
     "mocha": "^3.0.2",
     "nyc": "^10.0.0",
