--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "mongodb": "^2.2.25",
     "mongoose": "^4.9.1",
     "morgan": "^1.6.1",
+    "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "serve-favicon": "^2.3.0"
