--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "body-parser": "^1.13.3",
     "co": "^4.6.0",
     "compression": "^1.5.2",
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.3.3",
     "csv": "^1.1.1",
     "express": "^4.13.3",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "glob": "^6.0.4",
     "handlebars": "^4.0.6",
     "handlebars-helpers": "^0.9.8",
@@ -28,6 +30,7 @@
     "multer": "^1.3.0",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
+    "passport-local": "^1.0.0",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
