--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "co": "^4.6.0",
     "compression": "^1.5.2",
     "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
     "csv": "^1.1.1",
     "express": "^4.13.3",
@@ -31,6 +32,7 @@
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.2.1",
     "serve-favicon": "^2.3.0"
   },
   "devDependencies": {
