--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "body-parser": "^1.13.3",
+    "chai-as-promised": "^7.1.1",
     "co": "^4.6.0",
     "compression": "^1.5.2",
     "connect-ensure-login": "^0.1.1",
