--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
+    "debug": "node --inspect app.js",
     "test": "NODE_ENV=test mocha --recursive test",
     "test:coverage": "nyc npm test",
     "test:unit": "mocha --recursive test/middleware test/models test/routes",
@@ -20,6 +21,7 @@
     "cookie-parser": "^1.3.3",
     "csv": "^1.1.1",
     "express": "^4.13.3",
+    "express-authorization": "^1.0.0",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "glob": "^6.0.4",
@@ -34,7 +36,9 @@
     "passport-http": "^0.3.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.2.1",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "sinon": "^4.0.1",
+    "sinon-chai": "^2.14.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
