--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "handlebars-helpers": "^0.9.8",
     "method-override": "^2.3.0",
     "mongodb": "^2.2.25",
+    "mongodb-extended-json": "^1.10.0",
     "mongoose": "^4.9.1",
     "morgan": "^1.6.1",
     "multer": "^1.3.0",
@@ -38,7 +39,8 @@
     "passport-local-mongoose": "^4.2.1",
     "serve-favicon": "^2.3.0",
     "sinon": "^4.0.1",
-    "sinon-chai": "^2.14.0"
+    "sinon-chai": "^2.14.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "chai": "^3.5.0",
