--- a/package.json
+++ b/package.json
@@ -39,8 +39,6 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.2.1",
     "serve-favicon": "^2.3.0",
-    "sinon": "^4.0.1",
-    "sinon-chai": "^2.14.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
@@ -53,6 +51,8 @@
     "gulp-plumber": "^1.0.0",
     "mocha": "^3.0.2",
     "nyc": "^10.0.0",
-    "supertest": "^2.0.0"
+    "supertest": "^2.0.0",
+    "sinon": "^4.0.1",
+    "sinon-chai": "^2.14.0"
   }
 }
