--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       PORT: 3000
     links:
       - mongo:dev.database.contact-manager.com
+    command: npm start
   mongo:
     image: mongo
     ports:
