--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "app.js",
   "scripts": {
     "start": "node app.js",
-    "debug": "node --inspect app.js",
+    "debug": "nodemon --inspect=0.0.0.0:9229 app.js",
     "test": "NODE_ENV=test mocha --recursive test",
     "test:coverage": "nyc npm test",
     "test:unit": "mocha --recursive test/middleware test/models test/routes",
     "test:integration": "mocha --recursive test/integration",
-    "less" : "gulp less",
-    "assets" : "bower --allow-root install"
+    "less": "gulp less",
+    "assets": "bower --allow-root install"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
@@ -53,9 +53,10 @@
     "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
     "mocha": "^3.0.2",
+    "nodemon": "^1.17.5",
     "nyc": "^10.0.0",
-    "supertest": "^2.0.0",
     "sinon": "^4.0.1",
-    "sinon-chai": "^2.14.0"
+    "sinon-chai": "^2.14.0",
+    "supertest": "^2.0.0"
   }
 }
