--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.3.3",
-    "csv": "^1.1.1",
     "express": "^4.13.3",
     "express-authorization": "^1.0.0",
     "express-handlebars": "^3.0.0",
@@ -46,7 +45,9 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "csv": "^3.1.0",
     "debug": "^2.2.0",
+    "fs-extra": "^6.0.1",
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.1",
     "gulp-livereload": "^3.8.0",
