--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "test:unit": "mocha --recursive test/middleware test/models test/routes",
     "test:integration": "mocha --recursive test/integration",
     "less": "gulp less",
-    "assets": "bower --allow-root install"
+    "assets": "bower --allow-root install",
+    "docker-up" : "docker-compose up",
+    "docker-debug" : "docker-compose -f docker-compose.yaml -f docker-compose.debug.yaml up"
   },
   "dependencies": {
     "body-parser": "^1.13.3",
