--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "glob": "^6.0.4",
     "handlebars": "^4.0.6",
     "handlebars-helpers": "^0.9.8",
+    "invert-color": "^1.2.3",
     "method-override": "^2.3.0",
     "mongodb": "^2.2.25",
     "mongodb-extended-json": "^1.10.0",
