--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "uuid": "^3.1.0"
   },
   "devDependencies": {
+    "bower": "^1.8.4",
     "chai": "^4.1.2",
     "csv": "^3.1.0",
     "debug": "^2.2.0",
