In Progress Config

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,8 @@ services:
       - "3000:3000"
     environment:
       PORT: 3000
+    env_file:
+      - .env.dev-docker
     links:
       - mongo:dev.database.contact-manager.com
     command: npm start
