--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^4.2.1",
     "serve-favicon": "^2.3.0",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "vue-clipboard2": "^0.2.1"
   },
   "devDependencies": {
     "bower": "^1.8.4",
