Revert "removes unused handlebars views"
This reverts commit e3a15c5d67fea2ce10b5e2323da9577fa3200c9c.

--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "express-authorization": "^1.0.0",
+    "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "express-vue": "^4.0.14",
     "glob": "^6.0.4",
+    "handlebars": "^4.0.6",
     "handlebars-helpers": "^0.9.8",
     "invert-color": "^1.2.3",
     "method-override": "^2.3.10",
