--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "chai": "^4.1.2",
     "csv": "^3.1.0",
     "debug": "^2.2.0",
+    "dotenv": "^6.2.0",
     "fs-extra": "^6.0.1",
     "gulp": "^3.9.0",
     "gulp-less": "^3.0.1",
